fix jumping footer

--- a/src/components/Navigation/Footer.scss
+++ b/src/components/Navigation/Footer.scss
@@ -35,9 +35,7 @@
 }
 
 .img {
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 20px;
+  margin: 10px 5px 20px;
   width: auto;
   height: 50px;
   transition: all 0.075s ease-in-out;
@@ -68,4 +66,5 @@
 .sponsors {
   text-align: center;
   margin-top: 20px;
+  overflow: hidden;
 }
